[workspace]
members = [
    "applications/poc",
    "applications/liquidity_daemon",
    "networks/ethereum",
    "networks/tari"
]
exclude = ["tari/template"]

[workspace.dependencies]
ethers = { version = "2.0.7", default-features = false }
sha2 = "0.10.7"
tari_crypto = { version = "0.17" }
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git" }
thiserror = "1.0.43"
tokio = "1.29.1"