[package]
name = "tari"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = "0.9"
tari_crypto = { version = "0.17" }
sha2 = { workspace = true }
tari_dan_common_types = { git = "https://github.com/tari-project/tari-dan" }
tari_dan_engine = { git = "https://github.com/tari-project/tari-dan" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan" }
tari_template_lib = { git = "https://github.com/tari-project/tari-dan" }

[dev-dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.143", default-features = false, features = ["alloc", "derive"] }
tari_bor = { git = "https://github.com/tari-project/tari-dan" }
tari_template_builtin = { git = "https://github.com/tari-project/tari-dan" }
tari_transaction = { git = "https://github.com/tari-project/tari-dan" }
tari_transaction_manifest = { git = "https://github.com/tari-project/tari-dan" }