[package]
name = "tari"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = "0.9"
tari_crypto = { workspace = true }
sha2 = { workspace = true }
tari_dan_common_types = { path = "../../tari-dan/dan_layer/common_types" }
tari_dan_engine = { path = "../../tari-dan/dan_layer/engine" }
tari_engine_types = { path = "../../tari-dan/dan_layer/engine_types" }
tari_template_builtin = { path = "../../tari-dan/dan_layer/template_builtin" }
tari_template_lib = { workspace = true }
tari_transaction = { path = "../../tari-dan/dan_layer/transaction" }
tari_utilities = "=0.4.10"
tari_wallet_daemon_client = { path = "../../tari-dan/clients/wallet_daemon_client" }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0.72"
serde = { version = "=1.0.164", default-features = false, features = ["alloc", "derive"] }
tari_bor = { path = "../../tari-dan/dan_layer/tari_bor" }
tari_transaction_manifest = { path = "../../tari-dan/dan_layer/transaction_manifest" }
