[package]
name = "liquidity_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.0"
axum-jrpc = { version = "0.3.2", features = ["anyhow_error"] }
clap = { version = "4.3.19", features = ["derive", "env"] }
env_logger = "0.10.0"
ethers = { workspace = true, features = ["abigen", "ws", "rustls", "ethers-solc"] }
ethereum = { path = "../../networks/ethereum" }
log = { version = "0.4.8", features = ["std"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "2.3"
tari = { path = "../../networks/tari" }
tari_crypto = { workspace = true }
tari_template_lib = { workspace = true }
thiserror = "^1.0.20"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-layer = "0.3"
tower-http = { version = "0.3.0", features = ["cors"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }