[package]
name = "swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { workspace = true, features = ["abigen", "ws", "rustls", "ethers-solc"] }
ethereum = { path = "../../networks/ethereum" }
tari = { path = "../../networks/tari" }
tari_crypto = { workspace = true }
tari_template_lib = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }