[package]
name = "tari"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = "0.9"
serde = { version = "=1.0.164", default-features = false, features = ["alloc", "derive"] }
sha2 = { workspace = true }
tari_crypto = { workspace = true }
tari_dan_common_types = { git = "https://github.com/tari-project/tari-dan.git" }
tari_dan_engine = { git = "https://github.com/tari-project/tari-dan.git" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan.git" }
tari_template_builtin = { git = "https://github.com/tari-project/tari-dan.git" }
tari_template_lib = { workspace = true }
tari_transaction = { git = "https://github.com/tari-project/tari-dan.git" }
tari_utilities = "=0.4.10"
tari_wallet_daemon_client = { git = "https://github.com/tari-project/tari-dan.git" }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0.72"
tari_bor = { git = "https://github.com/tari-project/tari-dan.git" }
tari_transaction_manifest = { git = "https://github.com/tari-project/tari-dan.git" }
